module_one.tf
#####################################################################
# VARIABLES
#####################################################################

variable "aws_access_key" {
  default = "ASIA5547CE7RBDF2N24H"
}
variable "aws_secret_key" {
  default = "ovlcxnrDpTMBjiPvI7hmfGCYZ1pjKCvDHvKDr/0J"
}

variable "aws_session_token" {
  default = "FwoGZXIvYXdzENj//////////wEaDBFcYiUyjkax0AD6DiKuAauWcaeu1EuCnxzz7U1h0/9QCVmipoY524y6OZlkhWqXpRVvbRW0YGI6yPJ1zDOEPWcRMfN1IvF6mi4PWtPWqjaGL+fCnHKNCh78i9HOmzmjXi43ginO3JHOn7oik2/zwib743Y50Q2jcMHv5xUclB2Hf7EDJ2Rtqp+bStNKKy/YMwK0pAhvy19sEIJAnXhM1yVNqHPbLzgVqrdXRoEUhj73Q5p/w0smTZ1g5OEnlSi0yMP+BTIt4q0B62cqEs+bewc5CfJF8eS27WbBaHmLEe4e0aBd1HFCapFyq4mo9BVxD/Gu"
}

variable "private_key_path" {
  default = "./id_rsa"
}

variable "region" {
  default = "us-east-1"
}

#####################################################################
# PROVIDERS
#####################################################################

provider "aws" {
  region = var.region
  access_key = var.aws_access_key
  secret_key = var.aws_secret_key
  token = var.aws_session_token
}

#####################################################################
# DATA
#####################################################################

data "aws_ami" "aws-linux" {
  most_recent = true
  owners = ["957574424546"]

  filter {
    name = "name"
    values = ["Webserver"]
  }
}

data "aws_subnet_ids" "default_subnet_id" {
  vpc_id = aws_default_vpc.default.id
}

#####################################################################
# RESOURCES
#####################################################################

resource "aws_default_vpc" "default" {}
resource "aws_security_group" "webserver_security_group" {
  name = "Webserver"
  description = "The security group of all of the webservers"
  vpc_id = aws_default_vpc.default.id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["84.195.18.71/32","84.194.49.69/32","193.190.154.173/32","193.190.154.174/32","193.190.154.175/32","193.190.154.176/32"]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["84.195.18.71/32","84.194.49.69/32","193.190.154.173/32","193.190.154.174/32","193.190.154.175/32","193.190.154.176/32"]
  }

  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["84.195.18.71/32","84.194.49.69/32","193.190.154.173/32","193.190.154.174/32","193.190.154.175/32","193.190.154.176/32"]
  }
}

resource "aws_security_group" "database_security_group" {
  name = "Database"
  description = "The security group of the database"
  vpc_id = aws_default_vpc.default.id

  ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    security_groups = [aws_security_group.webserver_security_group.id]
  }

  egress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    security_groups = [aws_security_group.webserver_security_group.id]
  }
}

resource "tls_private_key" "webserver_private_key" {
  algorithm = "RSA"
}

module "key_pair" {
  source = "terraform-aws-modules/key-pair/aws"
  key_name   = "Webserver"
  public_key = tls_private_key.webserver_private_key.public_key_openssh
}

resource "local_file" "key_file" {
  content = tls_private_key.webserver_private_key.private_key_pem
  filename = "Webserver.pem"
}

module "db" {
  source = "terraform-aws-modules/rds/aws"

  identifier = "webserverdb"
  username = "webserverdb"
  password = "JensThomas05"
  port = 3306

  instance_class = "db.t3.small"
  engine = "mysql"
  engine_version = "5.7.19"
  major_engine_version = "5.7"
  family = "mysql5.7"
  allocated_storage = 5

  backup_window = "03:00-06:00"
  maintenance_window = "Mon:00:00-Mon:03:00"

  subnet_ids = data.aws_subnet_ids.default_subnet_id.ids
}

resource "aws_instance" "webserver1" {
  ami = data.aws_ami.aws-linux.id
  instance_type = "t2.micro"
  key_name = "Webserver"
  vpc_security_group_ids = [aws_security_group.webserver_security_group.id]

  connection {
    type = "ssh"
    host = self.public_ip
    user = "ec2-user"
    private_key = file(var.private_key_path)
  }
}



#####################################################################
# OUTPUT
#####################################################################

output "aws_instance_public_dns" {
    value = aws_instance.webserver1.public_dns
}

output "this_db_instance_address" {
  description = "The address of the RDS instance"
  value       = module.db.this_db_instance_address
}

resource "local_file" "localhost_yml" {
  content = <<-DOC
    # Ansible vars_file containing variable values from Terraform.
    # Generated by Terraform mgmt configuration.

    AWS__Database_ip: ${module.db.this_db_instance_address}
    AWS__Public_DNS: ${aws_instance.webserver1.public_dns}
    DOC
  filename = "./localhost.yml"
}
